# MagiskbootAlone

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md  build_android.sh
.github/workflows/: build.yml
src/: base_host.cpp  base_host.hpp  boot_crypto.cpp  boot_crypto.hpp  bootimg.cpp  bootimg.hpp  cpio.cpp  cpio.hpp  magiskboot.hpp  magiskboot_main.cpp
